--- a/web/tutorconnect/package.json
+++ b/web/tutorconnect/package.json
@@ -20,6 +20,7 @@
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "react-select": "^5.10.2"
   },
